# cpp-template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: version.cmake
include/: version.hpp
test/: CMakeLists.txt
